# hackathon_BI-Rise

./: .env.sample  .gitignore  README.md  docker-compose.yml  pyproject.toml  submit_job.sh
airule_agent/: cache_helpers.py  dsl_rules.py  main.py  pyproject.toml  rule_loader.py  scheduler.py
alert_consolidator/: main.py  pyproject.toml
bscore_agent/: main.py  pyproject.toml
dashboard/: .gitignore  package.json
data_generation/: append_transactions_csv.py  dummy_accounts.py  dummy_banks.py  dummy_blacklists.py  dummy_compliace_recods.py  dummy_device.py  dummy_device_logs.py  dummy_merchant.py  dummy_rules.py  dummy_transactions.py  dummy_users.py  generate_currency_rate.py  generate_transactions_db.py
db/: config.py  models.py
docker/: Dockerfile.airule_agent  Dockerfile.alert_consolidator  Dockerfile.bscore_agent  Dockerfile.dashboard  Dockerfile.fraud_detection_ui  Dockerfile.fraud_dispatcher  Dockerfile.kafka_manager  Dockerfile.payment_gateway  Dockerfile.payment_gateway_ui  Dockerfile.transaction_consumer  Dockerfile.transaction_streaming  requirements.txt
experiment/: hacketon_fraud.ipynb
fraud_detection_ui/: app.py  consumer.py  pyproject.toml
fraud_dispatcher/: main.py  pyproject.toml
kafka_manager/: pyproject.toml  register_schema.py  topics.py
kafka_manager/schema/: transaction_raw.avsc
payment_gateway/: main.py  pyproject.toml  sample_producer.json  sample_transaction_raw.json
payment_gateway/utils/: config.py  producer.py  redis_cache.py  schema.py  services.py
payment_gateway_ui/: .env.example  README.md  app.py  bulk_transaction_generator.py  pyproject.toml  single_payment.py  utils.py
prometheus/: prometheus.yml
sql/: change_to_neo.sql
transaction_consumer_enriched/: consumer_enriched.py  main.py  processor.py  pyproject.toml  storage.py
transaction_consumer_raw/: consumer.py  db_session.py  main.py  processor.py  pyproject.toml  storage.py
transaction_streaming_flink/: pom.xml
(+25 files in other folders)
