[project]
name = "hacketon-fraud"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aioredis>=2.0.1",
    "alembic>=1.16.2",
    "apache-flink==1.19.1",
    "apache-flink-libraries==1.19.1",
    "asyncpg>=0.30.0",
    "confluent-kafka>=2.10.1",
    "faker>=37.4.0",
    "fastapi[standard]>=0.115.13",
    "fastavro-gen>=0.0.3",
    "minio>=7.2.15",
    "numpy>=1.24.4",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "redis[async]>=6.2.0",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.46.0",
]
